refactor(auth): implement standardized response codes
Replace hardcoded success and error messages with MessageCode constants and integrate MessageService for internationalized responses across the auth service.